updated meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="IDKWhatDoYouWant?"
+      content="A site to answer the age old question..."
     />
     <!-- <link rel="stylesheet" href="../src/App.css"> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
