updated store to reflect typeof

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="IDKWhatDoYouWant?"
-      content="A site to answer the age old question..."
+      content="An app to solve the age old dilemma of where to eat!"
     />
     <!-- <link rel="stylesheet" href="../src/App.css"> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
