--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
   </head>
   <body>
 
-    <!-- <div class="splash">
+    <div class="splash">
       <img id="splashImage" src="./IDK-fullpage.png">
-    </div> -->
+    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
